--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@fortawesome/fontawesome-free": "^5.6.3",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@types/chart.js": "^2.7.40",
+    "animate.css": "^3.7.2",
+    "bootstrap": "^4.5.2",
+    "chart.js": "^2.7.2",
+    "hammerjs": "~2.0.8",
+    "jquery": "^3.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
